2023-07-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-tramp-timeout, with-tramp-suspended-timers):
	New defmacros.
	(tramp-dont-suspend-timers): New defvar.
	(tramp-handle-access-file): Implement handling of
	`remote-file-name-access-timeout'.  (Bug#64401)
	(tramp-action-show-and-confirm-message, tramp-process-actions)
	(with-tramp-locked-connection, tramp-wait-for-regexp)
	(tramp-read-passwd, tramp-read-passwd-without-cache): Use the macros.

2023-07-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-do-copy-or-rename-file):
	* tramp-rclone.el (tramp-rclone-do-copy-or-rename-file):
	Improve stability for WebDAV.

2023-06-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-expand-args): Use `tramp-compat-take'.

	* tramp-container.el (tramp-kubernetes--context-namespace):
	Adapt dpcstring.
	(tramp-kubernetes-connection-local-default-profile)
	(tramp-kubernetes-connection-local-default-variables)
	(tramp-flatpak-connection-local-default-profile)
	(tramp-flatpak-connection-local-default-variables): Rename.

2023-06-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-fuse.el (tramp-fuse-mounted-p): The mount-spec could
	contain an optional trailing slash.  (Bug#64278)

	* tramp-rclone.el (tramp-rclone-handle-file-system-info):
	Check return code of command.

2023-06-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-buffer-string): Check, that BUFFER is really
	a bufferp.

2023-06-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Adapt docstring.
	(tramp-extra-expand-args): New defvar.
	(tramp-expand-args): Use it.

	* tramp-container.el (tramp-kubernetes-context)
	(tramp-kubernetes-namespace): New defcustoms.
	(tramp-kubernetes--completion-function): Extend for CONTAINER.POD
	syntax.
	(tramp-kubernetes--host-name-regexp): New defconst.
	(tramp-kubernetes--container, tramp-kubernetes--pod)
	(tramp-kubernetes--current-context): New defuns.